--- a/frontend/src/components/Editor.css
+++ b/frontend/src/components/Editor.css
@@ -26,18 +26,13 @@
     height: 100%;
 }
 
-textarea {
-    width: 100%;
-    height: 100%;
-    padding: 1rem;
-    box-sizing: border-box;
-    border: none 2px none none;
-    border-radius: 4px;
-    font-size: 1rem;
-    resize: none;
-    outline: none;
+::-webkit-scrollbar {
+    background-color: rgb(51 65 85);
+    width: 15px;
+    border-radius: 30px;
 }
 
-textarea:focus::placeholder {
-    color: transparent
+::-webkit-scrollbar-thumb {
+    background-color: rgb(71 85 105);
+    border-radius: 30px;
 }
