--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -10,7 +10,7 @@
     font-size: 1rem;
 }
 
-#navbar > li:hover > .file-options {
+#navbar > li:hover .file-options {
     display: inline;
 }
 .file-options {
