--- a/frontend/src/components/Editor.css
+++ b/frontend/src/components/Editor.css
@@ -36,3 +36,17 @@
     background-color: rgb(71 85 105);
     border-radius: 30px;
 }
+
+.color {
+    width: 3rem;
+    height: 3rem;
+    cursor: pointer;
+}
+
+#colors {
+    display: grid;
+    grid-template-columns: repeat(5, .2fr);
+    grid-template-rows: repeat(4, .25fr);
+    padding: 1rem;
+    place-items: center;
+}
